tests/NormalTests/paczka1/fuzzy1/10261258.err
Error in line 5: U0Un6 A149 52,3
Error in line 27: 1ShJKR4ehO A149 86,0
